--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "0. **Weather data** cleaning and preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. **Aggregate Consumption** Model"
    ]
   },
@@ -25,42 +32,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. **Unsupervised classification** - Tariff"
+    "2. Get **baseline** accuracy of supervised models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Implement **Active learning** for query synthesis"
+    "3. **Unsupervised classification** - Tariff"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. **Clustering of users** based on survey questions"
+    "4. Implement **Active learning** for query synthesis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "5. **Clustering of users** based on survey questions"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Questions for meeting 13 Feb\n",
+    "\n",
+    "- Weather model features may not be accurate (see the temperature influence on the global consumption model)\n",
+    "- Query synthesis/ stream based"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "### Meeting summary 13 Feb\n",
+    "\n",
+    "![Blackboard snapshot](misc/simulator_discussion.jpg \"Simulator idea\")"
+   ]
   }
  ],
  "metadata": {
