--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Thesis Outline\n"
+    "# Thesis Notes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -18,61 +25,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. **Weather data** cleaning and preprocessing"
+    "1. **Weather data** cleaning and preprocessing --- *Done*\n",
+    "- **Aggregate Consumption** Model --- *Done*\n",
+    "- Get **baseline** accuracy of supervised models --- *Done*\n",
+    "- Create a **Simulator**\n",
+    "- **Unsupervised classification** - Tariff\n",
+    "- Implement **Active learning** for query synthesis\n",
+    "- **Clustering of users** based on survey questions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Aggregate Consumption** Model"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Get **baseline** accuracy of supervised models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. **Unsupervised classification** - Tariff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4. Implement **Active learning** for query synthesis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5. **Clustering of users** based on survey questions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Questions for meeting 13 Feb\n",
+    "## Meeting 13 Feb 2019\n",
+    "\n",
+    "#### Questions\n",
     "\n",
     "- Weather model features may not be accurate (see the temperature influence on the global consumption model)\n",
-    "- Query synthesis/ stream based"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Meeting summary 13 Feb\n",
+    "- Query synthesis/ stream based\n",
     "\n",
-    "![Blackboard snapshot](misc/simulator_discussion.jpg \"Simulator idea\")"
+    "#### Summary\n",
+    "\n",
+    "- Create a simulator as shown in the image below. \n",
+    "- Have a working prototype on Feb 25\n",
+    "- Discussed the idea of two active learning models as different chapters of MSc thesis (1. predict tariff from energy usage pattern, 2. Predict usage pattern from tariff). *This would be implemented after having a working simulator*\n",
+    "\n",
+    "![Blackboard snapshot](misc/simulator_discussion.jpg \"Simulator idea\")\n",
+    "\n",
+    "#### Updates"
    ]
   }
  ],
