--- a/src/Outline.ipynb
+++ b/src/Outline.ipynb
@@ -58,7 +58,10 @@
     "- Have a working prototype on Feb 25\n",
     "- Discussed the idea of two active learning models as different chapters of MSc thesis (1. predict tariff from energy usage pattern, 2. Predict usage pattern from tariff). *This would be implemented after having a working simulator*\n",
     "\n",
-    "![Blackboard snapshot](misc/simulator_discussion.jpg \"Simulator idea\")\n",
+    "![Blackboard snapshot](../misc/simulator_discussion.jpg \"Simulator idea\")\n",
+    "\n",
+    "![Blackboard 1](../misc/flow.jpg \"Simulator flow\")\n",
+    "\n",
     "\n",
     "#### Updates:\n"
    ]
