--- a/notebooks/simulator.ipynb
+++ b/notebooks/simulator.ipynb
@@ -42,8 +42,10 @@
     "          'train_start_dt':'2013-01',\n",
     "          'train_stop_dt':'2013-12',\n",
     "          'y_variable': 'trial_d',\n",
-    "          'X_variables':['trial_n', 'low', 'normal', 'high', 'WIND_DIRECTION', 'WIND_SPEED', 'VISIBILITY', 'MSL_PRESSURE',\n",
-    "                         'AIR_TEMPERATURE', 'DEWPOINT', 'WETB_TEMP', 'STN_PRES', 'WMO_HR_SUN_DUR', 'hour', 'day'],\n",
+    "          'X_variables':['trial_n', 'low', 'normal', 'high', 'WIND_DIRECTION', \n",
+    "                         'WIND_SPEED', 'VISIBILITY', 'MSL_PRESSURE',\n",
+    "                         'AIR_TEMPERATURE', 'DEWPOINT', 'WETB_TEMP', \n",
+    "                         'STN_PRES', 'WMO_HR_SUN_DUR', 'hour', 'day'],\n",
     "    \n",
     "#         Set XGBoost regression parameters (for consumption model)\n",
     "          'n_estimators': 50,\n",
@@ -306,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simulating dataframe time index\n",
+    "# Simulating dataframe time index for tariff policy\n",
     "index = datetime(2013, 4, 10, 17, 30, 0)\n",
     "h1_start = int(index.hour * 2) + int(index.minute / 30)\n",
     "h1_end = h1_start + 10\n",
