--- a/notebooks/Outline.ipynb
+++ b/notebooks/Outline.ipynb
@@ -63,7 +63,30 @@
     "![Blackboard 1](../misc/flow.jpg \"Simulator flow\")\n",
     "\n",
     "\n",
-    "#### Updates:\n"
+    "#### Updates:\n",
+    "\n",
+    "Completed the basic simluator before the next meeting\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Meeting 25 Feb 2019\n",
+    "\n",
+    "#### Questions:\n",
+    "- Damped predictions by the xgboost consumption model. How to work on the issue?\n",
+    "- what to do next?\n",
+    "\n",
+    "#### Summary:\n",
+    "\n",
+    "- Discussed the issue of damping of prediction values. As the machine learning model can be biased due to its reliance on two different user datatsets (consumption_n, consumption_d), we decided the better way would be to manually offset the user consumption. This implementation would solve the problem of the bias in the predictions of user behaviour\n",
+    "- The supervisor suggested me to write down a document on the simulator. I am planning to provide the document before the end of the next week. \n",
+    "- Discussed briefly about covariate shift. Need to read more about the concept before the next meeting.\n",
+    "- Also discussed the concept of importance weighting\n",
+    "- The next step after rectifying the simulator is to write down the final idea of the problem to be solved.\n",
+    "\n",
+    "#### Update:"
    ]
   }
  ],
