--- a/notebooks/simulator.ipynb
+++ b/notebooks/simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-224-55cf091d60c4>, line 41)",
+     "evalue": "expected an indented block (<ipython-input-4-55cf091d60c4>, line 41)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-224-55cf091d60c4>\"\u001b[0;36m, line \u001b[0;32m41\u001b[0m\n\u001b[0;31m    def entropy(self):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-55cf091d60c4>\"\u001b[0;36m, line \u001b[0;32m41\u001b[0m\n\u001b[0;31m    def entropy(self):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -256,7 +256,10 @@
     "        df_response['mean']= df_response.mean(axis = 1)\n",
     "        return df_response['mean']\n",
     "            \n",
-    "            "
+    "            \n",
+    "            \n",
+    "    def test(self):\n",
+    "        "
    ]
   },
   {
