--- a/notebooks/Design of priority based dToU policy using machine learning - Demand side management.ipynb
+++ b/notebooks/Design of priority based dToU policy using machine learning - Demand side management.ipynb
@@ -5,77 +5,80 @@
    "metadata": {},
    "source": [
     "# Design of smart dToU policy using machine learning \n",
-    "#### An organic approach to achieve maximum savings with minimum active users\n",
+    "#### Demand side management with the novel natural selection algorithm\n",
     "---\n",
     "\n",
     "## The Idea\n",
-    "The proposed idea approaches the demand side management problem using smart dToU policy to further improve the user engagement. The idea is to design a tariff policy which would match the observed mean consumption to target mean consumption. While improving the tariff policy, the algorithm will also create a probability distribution of the users based on their participation influence on overall consumption. The target outcome of the experiment is to get the least number of tariff signals to be sent to specific users in order to match the target mean consumption. \n",
+    "The proposed idea approaches the demand side management problem using smart dToU policy by selecting favourable participants to further improve user engagement. The basic idea is to design a tariff policy which would match the observed mean consumption to target mean consumption. While improving the tariff policy, the algorithm will also run natural selection algorithm considering users' influence on overall consumption change. The target outcome of the experiment is to select the optimal set of participating users in order to match the target mean consumption for each experiment. \n",
     "\n",
     "For the aforementioned experimental setup, based on their engagement, the users are categorized as follows:\n",
     "\n",
-    "1. Users with more than 95% engagement\n",
-    "2. Users with more than 60% engagement\n",
-    "3. Users with more than 30% engagement\n",
-    "4. Users with no engagement\n",
+    "1. Users with 95% engagement\n",
+    "2. Users with 60% engagement\n",
+    "3. Users with 30% engagement\n",
+    "4. Users with less than 10% engagement\n",
     "\n",
     "The above categories are proposed for initial conceptualization and may change over time.\n",
     "\n",
     "### Experiment constraints\n",
-    "- Upper limit on the number of test signals:\n",
-    "   - For each experimental setup, only limited number of test signals will be provided.\n",
+    "- The upper limit on the number of test signals:\n",
+    "   - For each experimental setup, a limited number of test signals will be provided.\n",
     "   - The algorithm can decide the number of recipients for each test signal.\n",
     "   \n",
     "   \n",
     "- Available tariff policies:\n",
-    "    - The model can choose from a predefined set of tariff policies for every particular case. This step is implemented due to other constraints on tariff policy design such as - minimum duration of tariff level, predictable peak hours, limit on maximum number of experiments per day etc. (in other words, why reinvent a wheel!) \n",
+    "    - The model can choose from a predefined set of tariff policies for every experiment case. This step is implemented due to other constraints on tariff policy design such as - minimum duration of tariff level, predictable peak hours, limits on the maximum number of experiments per day etc. (in other words, why reinvent a wheel!) \n",
     "\n",
     "- Minimize the loss function\n",
-    "    - Loss is calculated as a quadratic function of difference between expected mean consumption and target mean consumption\n",
+    "    - The loss is calculated as a quadratic function of the difference between expected mean consumption and target mean consumption\n",
     "    \n",
     "## Problem details\n",
     "\n",
-    "The problem is two fold. The first step of the problem is to identify best tariff policy from the given set of tariff policies. The next and more interesting problem is to minimize the number of tariff signals to be sent for a particular trial.\n",
+    "The problem is two-fold. The first step of the problem is to identify the best tariff policy from the given set of tariff policies. The next and more interesting problem is to obtain a specific set of users who will get tariff signals for a particular trial.\n",
     "\n",
     "### Why Bayesian analysis\n",
-    "Although the experiment design for dToU tariff policy design is a simple problem (because of known and predictable peak hours), complexity of problem increases when we try to minimize the total number of signals to be sent. At this point, the problem can be analyzed from two different views: \n",
+    "Although the experiment design for dToU tariff policy design is a simple problem (because of known and predictable peak hours), the complexity of the problem increases when we try to minimize the number of users who will receive the tariff signals. At this point, the problem can be analyzed from two different perspectives: \n",
+    "\n",
     "1. Frequentist problem (classic way of machine learning) \n",
     "2. Bayesian problem\n",
     "\n",
     "The Bayesian analysis is superior to classic frequentist analysis because of the following advantages:\n",
-    "1. Use of priors. Therefore easier to compensate the shift in the target variable (idea of 'target shift' seems more important in this case than 'covariate shift' as user behaviour would change over time, but contextual variables will  more or less remain same)\n",
-    "2. Bayesian analysis tells us how likely 'A' is winner over 'B' and by how much. This improves the transparency in the decision making process for energy retailer company in practical world. Frequentist problem depends entirely on the prespecified hypothesis.\n",
-    "3. Bayesian analysis doe not require user to define many hyper-parameters/ thresholds to formulate valid hypothesis. Hence, robustness and reliability of the algorithm is better. This is especially useful in this case as the entire hypothesis formulation depends on simulation data. Therefore, ideally models with Bayesian hypothesis would perform better in practical world.\n",
+    "\n",
+    "1. Use of priors. Therefore easier to compensate the shift in the target variable (the idea of 'target shift' seems more important in this case than 'covariate shift' as user behaviour would change over time, but contextual variables will have predictable trends)\n",
+    "2. Bayesian analysis tells us how likely 'A' is the winner over 'B' and by how much. This improves transparency in the decision making process for an energy retailer company in the practical world. Frequentist problem depends entirely on the prespecified hypothesis. Hence, can be fooled easily.\n",
+    "3. Bayesian analysis doe not require a user to define many hyper-parameters/ thresholds to formulate a valid hypothesis. Hence, the robustness and reliability of the algorithm are better. This is especially important in this case as the entire hypothesis formulation depends on simulation data. Therefore, ideally models with Bayesian hypothesis would perform better in the practical world.\n",
     "\n",
     "\n",
     "## Approach\n",
     "\n",
-    "Both the problems will be solved with active learning method. The first problem can be solved with frequentist analysis and hypothesis (solution can be converged easily with preset of tariff policies). Hence, the tariff policy choosing problem can be solved with any available probabilistic method.\n",
+    "Both parts of the problem will be solved with active learning method. The first problem can be solved with frequentist analysis as well as Bayesian analysis (solution can be converged easily with a limited predefined set of tariff policies). Hence, the problem of tariff policy selection can be solved with any available probabilistic method using active learning.\n",
     "\n",
-    "For choosing the optimal number of tariff signals to specific users (prioritized by algorithm) for meeting the target consumption level, Bayesian analysis is used. The Bayes rule for this particular problem can be formulated as below,\n",
+    "For choosing the optimal set of the user for an experiment (prioritized by algorithm) to meet the target consumption level, Bayesian analysis will be used. The Bayes rule for this problem can be formulated as below,\n",
     "\n",
-    "![Bayes rule](https://raw.githubusercontent.com/shreyasnikte/Active-Learning-TUD-Thesis/master/docs/img/bayes2.png)\n",
+    "![Bayes rule](../docs/img/bayes2.png)\n",
     "\n",
     "Where,\n",
     "\n",
-    "![explaination](https://raw.githubusercontent.com/shreyasnikte/Active-Learning-TUD-Thesis/master/docs/img/bayes3.png)\n",
+    "![explaination](../docs/img/bayes3.png)\n",
     "\n",
-    "The above Bayesian approach directly uses the simulator generated 'observation' as expected mean consumption. A more practical approach would be the use of contextual variables. The target mean consumption will be provided to the model from preset targets. The ρ is the distribution of contribution of k users in total energy consumption change.\n",
+    "The above Bayesian approach directly uses the simulator generated 'observation' as the expected mean consumption. A more practical/ realistic approach would be the use of contextual variables. In the latter approach, the assumption is made that the contextual variables will fully describe the energy needs of users at any particular time. The target means consumption will be provided to the model from preset targets (generated by us). The ρ is the set of contributions of k users in total energy consumption change for each preset targets.\n",
     "\n",
     "## The contribution of this project\n",
     "What this approach can do- \n",
     "\n",
     "- design dToU tariff policy with active learning technique\n",
-    "- cope up with changing user behaviour over time (target shift)\n",
+    "- update the knowledge with each new experiment and can cope up with changing user behaviour over time (target shift)\n",
     "- organically solve the problem of user selection considering user interest in the dToU scheme\n",
-    "- provide transparency in user selection for reception of price signals with Bayesian approach\n",
+    "- provide transparency in user selection for reception of price signals with the Bayesian approach\n",
+    "- Practical benefit: Natural selection. Potentially more engaging users can get more rewards by energy retailer company, while least interested users will opt out naturally and won't get punished for not participating\n",
     "\n",
     "\n",
-    "## Proposed analysis of the approach\n",
+    "## Next: Analysis of the approach\n",
     "Following tests can be carried out to understand the effectiveness of the approach.\n",
     "\n",
-    "- Analyze the effect of number of training tariff signals on final model accuracy\n",
+    "- Analyze the effect of the number of participating users (for each experiment) on final model accuracy (optimal set of users will not provide any new information)\n",
     "- Effect of number of tariff signals sent (per experiment) on accuracy \n",
-    "- Analyze target shift / covariate shift by changing input data\n"
+    "- Analyze the effect of target shift/covariate shift by changing input data\n"
    ]
   }
  ],
