--- a/notebooks/active_learning_RF.ipynb
+++ b/notebooks/active_learning_RF.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following cell contains all the important parameters which are used in the code. This dictionary would provide a single location to edit any of the parameters"
+    "Following cell contains dictionary of all the important parameters which are used in the code. This dictionary would provide a single location to edit any of the parameters"
    ]
   },
   {
@@ -517,7 +517,18 @@
     "            \n",
     "        \n",
     "#         Create for loop to train the model for m number of times (where, m = self.params[\"total_experiments\"] - self.params[\"init_samples\"])\n",
-    "    \n",
+    "        \n",
+    "        for exp in range(self.params[\"total_experiments\"] - self.params[\"init_samples\"]):\n",
+    "            \n",
+    "            # split data\n",
+    "            \n",
+    "            # train the model\n",
+    "            \n",
+    "            # get prediction probabilities\n",
+    "            \n",
+    "            # find entropy (optional)\n",
+    "            \n",
+    "            # for next experiment, get tariff policy, season and weekday \n",
     "     \n",
     "    \n",
     "        \n",
