--- a/notebooks/active_learning_RF.ipynb
+++ b/notebooks/active_learning_RF.ipynb
@@ -533,6 +533,7 @@
     "    \n",
     "        \n",
     "    def split_data(self, train_size):\n",
+    "        # Decide whether to pass data by day or by data point\n",
     "        pass\n",
     "        \n",
     "        \n",
