--- a/notebooks/active_learning_single_peak_point_V2.0.ipynb
+++ b/notebooks/active_learning_single_peak_point_V2.0.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "          'train_start_dt':'2013-01',\n",
     "          'train_stop_dt':'2013-12',\n",
     "          'y_variable': 'trial_d',\n",
-    "          'X_variables':['trial_n', 'low', 'normal', 'high', 'WIND_DIRECTION', \n",
+    "          'X_variables':['trial_n', 'low', 'normal', 'high', 'WIND_DIRECTION',\n",
     "                         'WIND_SPEED', 'VISIBILITY', 'MSL_PRESSURE',\n",
     "                         'AIR_TEMPERATURE', 'DEWPOINT', 'WETB_TEMP', \n",
     "                         'STN_PRES', 'WMO_HR_SUN_DUR', 'hour', 'day'],\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,9 +486,9 @@
     "                     \n",
     "        \n",
     "    def train_model(self, X_train, y_train):\n",
-    "        self.regres = RandomForestRegressor(max_depth=10, \n",
+    "        self.regres = RandomForestRegressor(max_depth=5, \n",
     "                                                random_state=0, \n",
-    "                                                n_estimators=1000)\n",
+    "                                                n_estimators=100)\n",
     "        self.regres.fit(X_train, y_train)\n",
     "        \n",
     "        \n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,9 +634,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading aggregate consumption data...\n",
+      "Done\n",
+      "Reading weather data...\n",
+      "Done\n",
+      "Reading LCL consumption data...\n",
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:03<00:00,  2.71it/s]\n",
+      "100%|██████████| 990/990 [1:24:23<00:00,  9.29s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "#     # import data and declare classes\n",
@@ -645,12 +666,14 @@
     "#     # start the simulator and active learning by membership query synthesis\n",
     "\n",
     "    trials_.run()\n",
-    "    list_ = [i for i in range(len(mse))]\n",
-    "    d = {'0':mse}\n",
+    "#     list_ = [i for i in range(len(mse))]\n",
+    "#     d = {'0':mse}\n",
     "    \n",
-    "    for i in range(params[\"total_iterations\"]):\n",
-    "        print(\"Iteration\", i+1) \n",
-    "        trials_.run()\n",
+    "#     for i in range(params[\"total_iterations\"]):\n",
+    "#         print(\"Iteration\", i+1) \n",
+    "#         trials_.run()\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "#     title = \"Mean Squared Error vs Number of samples\"\n",
@@ -678,13 +701,20 @@
     "    file_name = \"../results/feature_set\" + str(today) + \".txt\"\n",
     "    with open(file_name, \"w\") as output:\n",
     "        output.write(str(params[\"X_var_activeL\"]))\n",
-    "    \n"
+    "    \n",
+    "    print(\"Data saved.\")\n",
+    "#     print(\"summary:\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    ".\n",
+    ".\n",
+    ".\n",
+    ".\n",
     "# Scratch book\n",
     ".\n",
     "\n",
