--- a/notebooks/Untitled1.ipynb
+++ b/notebooks/Untitled1.ipynb
@@ -19,6 +19,40 @@
     "        - Add current day data to previous data pool\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next steps:\n",
+    "1. Characterize variation in parameters \n",
+    "    - pre-training data size vs accuracy, \n",
+    "    - pretraining data size vs number of samples, \n",
+    "    - variance threshold(s) vs accuracy, \n",
+    "    - accuracy vs number of labels\n",
+    "2. Other active learning strategies \n",
+    "    - query by committee, \n",
+    "    - emerging threshold, \n",
+    "    - without(?) threshold, \n",
+    "    - greedy learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Machine learning methods, active learning concepts goes up\n",
+    "\n",
+    "Explain overall design before synthetic data generator\n",
+    "\n",
+    "Analysis - make sure people understand your work\n",
+    "\n",
+    "\n",
+    "supervised vs unsupervised - do more analysis. what does it mean when model sees unseen tariff.\n",
+    "\n",
+    "plot 17-23 hours\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
